# omnix-demo

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.py  ci.yml
app/: Home.py
contracts/: policy.yml  schema.json
data/docs/: drug_label_X.md  payer_policy_ON.md
src/data/: dim_geo.csv  dim_hcp.csv  dim_payer.csv  fact_sales.csv
src/omnix.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/omnix/agents/: doc_agent.py  nl2sql.py  planner.py  talk_to_sql.py
src/omnix/api/: app.py
src/omnix/guard/: filters.py  policy.py
src/omnix/rag/: index.py
src/omnix/sql/: db.py  queries.py  seed_data.py
tests/: eval_nl2sql.jsonl  test_eval_guard.py  test_eval_n2sql.py  test_imports.py  test_planner.py  test_rag_guard.py  test_sql_basic.py
