[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omnix"
version = "0.0.1"
description = "Agentic talk-to-data demo for commercial pharma"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.7",
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "streamlit>=1.37",
  "duckdb>=1.0",
  "pandas>=2.2",
  "sqlglot>=25.0",          # safe SQL parsing/formatting
  "faiss-cpu>=1.8.0",
  "sentence-transformers>=3.0",
  "transformers>=4.43",
  "langchain>=0.2.9",       # orchestration (light use)
  "httpx>=0.27",
  "python-dotenv>=1.0",
  "rich>=13.7",
  "structlog>=24.1",
  "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-cov>=5.0",
  "ruff>=0.5.0",
  "mypy>=1.10",
  "types-PyYAML",
  "types-requests",
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
